--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: java
-#before_install:
-#  - chmod +x mvnw
+before_install:
+  - chmod +x mvnw
 services:
   - postgresql
 os:
   - linux
-addons:
-  postgresql: '13.2'
+#addons:
+#  postgresql: '13.2'
 #env:
 #  global:
 #    - PGPORT=5432
-before_script:
-  - psql -c 'create database testsystem;' -U postgres
-  - psql -c "CREATE USER postgres WITH CREATEDB PASSWORD 'super123';" -U postgres -p 5433
-script: mvn clean verify
+#before_script:
+#  - psql -c 'create database testsystem;' -U postgres
+#  - psql -c "CREATE USER postgres WITH CREATEDB PASSWORD 'super123';" -U postgres -p 5433
+script:
+ - mvn clean install
+ - mvn test
