--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ services:
   - postgresql
 os:
   - linux
-#addons:
-#  postgresql: '13.2'
-#env:
-#  global:
-#    - PGPORT=5432
-#before_script:
-#  - psql -c 'create database testsystem;' -U postgres
-#  - psql -c "CREATE USER postgres WITH CREATEDB PASSWORD 'super123';" -U postgres -p 5433
+addons:
+  postgresql: '13.2'
+env:
+  global:
+    - PGUSER=postgres
+    - PGPASSWORD=super123
+    - PGPORT=5432
+before_script:
+  - psql -c 'create database testsystem' -U postgres
 script:
  - mvn clean install
  - mvn test
