--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
 language: java
 before_install:
   - chmod +x mvnw
-    # Use trust instead of peer authentication:
-  - >-
-    sudo sed -i
-    -e '/local.*peer/s/postgres/all/'
-    -e 's/peer\|md5/trust/g'
-    /etc/postgresql/13/main/pg_hba.conf
-  # Restart the PostgreSQL service:
-  - sudo service postgresql@13-main restart
 os:
   - linux
 addons:
   postgresql: '13.2'
-#env:
-#  global:
-#    - PGUSER=postgres
-#    - PGPASSWORD=super123
-#    - PGPORT=5432
+env:
+  global:
+    - PGUSER=postgres
+    - PGPASSWORD=super123
+    - PGPORT=5432
 before_script:
   - sudo psql -p 5432 -U postgres -c 'create database testsystem;'
 script:
