--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,14 @@ before_install:
   - chmod +x mvnw
 os:
   - linux
-#addons:
-#  postgresql: '13.2'
-#env:
-#  global:
-#    - PGUSER=postgres
-#    - PGPASSWORD=super123
-#    - PGPORT=5432
+sudo: enabled
+addons:
+  postgresql: "9.5" // change "9.5" for your postgres specific version
 before_script:
-  - sudo psql -p 5432 -U postgres -c 'create database testsystem;'
-script:
- - mvn clean install
- - mvn test
+  - psql -c "create database testsystem;" -U postgres // your database name
+  - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'" // if your password is different from 'postgres` use that one here
+services:
+  - postgresql
+#script:
+# - mvn clean install
+# - mvn test
