--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,18 @@ language: java
 dist: trusty
 jdk:
  - openjdk11
-before_install:
-  - chmod +x mvnw
+#before_install:
+#  - chmod +x mvnw
 os:
   - linux
-sudo: enabled
-addons:
-  postgresql: "13.3"
-before_script:
-  - psql -c "create database testsystem;" -U postgres // your database name
-  - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'" // if your password is different from 'postgres` use that one here
-services:
-  - postgresql
-#script:
-# - mvn clean install
-# - mvn test
+#sudo: enabled
+#addons:
+#  postgresql: "13.3"
+#before_script:
+#  - psql -c "create database testsystem;" -U postgres // your database name
+#  - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'" // if your password is different from 'postgres` use that one here
+#services:
+#  - postgresql
+script:
+ - mvn clean install
+ - mvn test
