--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: java
 #dist: trusty
 jdk:
  - openjdk11
-#before_install:
-#  - chmod +x mvnw
+before_install:
+  - chmod +x mvnw
 os:
-  - windows
+  - linux
 #sudo: enabled
 #addons:
 #  postgresql: "13.3"
