--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ sudo: enabled
 addons:
   postgresql: "13.3"
 before_script:
-  - psql -c "create database testsystem;" -U postgres // your database name
-  - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'" // if your password is different from 'postgres` use that one here
+  - psql -c "create database testsystem;" -U postgres
+  - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 services:
   - postgresql
 #script:
