--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ services:
 install:
  - mvn -N io.takari:maven:wrapper
  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-script:
- - mvn clean install
- - mvn test
+#script:
+# - mvn clean install
+# - mvn test
