--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,7 @@
     <name>OrderSystem</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-             
-
-    <maven.compiler.source>1.8</maven.compiler.source> 
-    <maven.compiler.target>1.8</maven.compiler.target>
+            
 
 
 <!--        <thymeleaf.version>3.0.11 RELEASE</thymeleaf.version>-->
@@ -152,7 +149,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
             <!--<plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
