--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ services:
 install:
  - mvn -N io.takari:maven:wrapper
  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+ - mvn clean verify
