--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ before_script:
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 services:
   - postgresql
+install:
+ - mvn -N io.takari:maven:wrapper
+ - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
  - mvn clean verify
