--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>OrderSystem</name>
     <description>Demo project for Spring Boot</description>
     <properties>
+             <java.version>11</java.version>
             
 
 
