Update all files for travis testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ sudo: enabled
 addons:
   postgresql: "13.3"
 before_script:
-  - psql -c "create database testsystem;" -U postgres -p 5433
+  - psql -c "create database cosc2101;" -U postgres -p 5433
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 services:
   - postgresql
