--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,25 @@
 language: java
-dist: trusty
-jdk:
- - openjdk11
 before_install:
   - chmod +x mvnw
 os:
   - linux
+dist: trusty
 sudo: enabled
 addons:
-  postgresql: "11"
+  postgresql: "12"
   apt:
     packages:
-    - postgresql-11
-    - postgresql-client-11
+    - postgresql-12
+    - postgresql-client-12
 env:
   global:
   - PGPORT=5433
+  - PGUSER=travis
 before_script:
-  - psql -c "create database cosc2101;" -U postgres -p 5433
+  - psql -c 'create database cosc2101;' -U postgres -p 5433
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 services:
   - postgresql
 install:
  - mvn -N io.takari:maven:wrapper
  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-script:
- - mvn clean verify
