--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jdk: openjdk11
 os:
   - linux
 dist: xenial
-#addons:
-#  postgresql: "10"
+addons:
+  postgresql: "12"
 #env:
 #  global:
 #  - PGPORT=5433
