--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ os:
 dist: xenial
 addons:
   postgresql: "12"
-#env:
-#  global:
-#  - PGPORT=5433
-#  - PGUSER=travis
+  apt:
+    packages:
+    - postgresql-12
+    - postgresql-client-12
+env:
+  global:
+  - PGPORT=5433
+  - PGUSER=travis
 services:
   - postgresql
 before_script:
