--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,31 @@
 language: java
 before_install:
   - chmod +x mvnw
-  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
-  - sudo service postgresql restart
-  - sleep 1
+  - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
+  - "if [ ! -z $PGVERSION ]; then sudo service postgresql restart $PGVERSION; fi"
 sudo: true
 jdk: openjdk11
 os:
   - linux
 dist: xenial
-addons:
-  postgresql: "12"
-  apt:
-    packages:
-    - postgresql-12
-    - postgresql-client-12
-env:
-  global:
-  - PGPORT=5433
-  - PGUSER=travis
+matrix:
+  include:
+      - addons:
+        postgresql: "12"
+        apt:
+          packages:
+            - postgresql-12
+            - postgresql-client-12
+            - postgresql-server-dev-12
+            - postgresql-client-common
+            - postgresql-common
+      env:
+        PGPORT: "5433"
+        PGVERSION: 12
+#env:
+#  global:
+#  - PGPORT=5433
+#  - PGUSER=travis
 services:
   - postgresql
 before_script:
