--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
     postgresql: "12"
     apt:
       packages:
-            - postgresql-12
+ #           - postgresql-12
             - postgresql-client-12
             - postgresql-server-dev-12
             - postgresql-client-common
