--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ os:
 dist: xenial
 addons:
     postgresql: "12"
-    apt:
-      packages:
+ #   apt:
+ #     packages:
  #           - postgresql-12
-            - postgresql-client-12
-            - postgresql-server-dev-12
-            - postgresql-client-common
-            - postgresql-common
-env:
-   PGVERSION: 12
+ #           - postgresql-client-12
+ #           - postgresql-server-dev-12
+ #           - postgresql-client-common
+ #           - postgresql-common
+#env:
+#   PGVERSION: 12
 #env:
 #  global:
 #  - PGPORT=5433
