--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: java
 before_install:
   - chmod +x mvnw
-  - sudo chmod +r pg_hba.conf
 #  - mkdir /etc/postgresql/12/main/pg_hba.conf
 #  - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
 #  - "if [ ! -z $PGVERSION ]; then sudo service postgresql restart $PGVERSION; fi"
@@ -9,7 +8,7 @@ sudo: true
 jdk: openjdk11
 os:
   - linux
-dist: xenial
+dist: trusty
 addons:
     postgresql: "12"
  #   apt:
