--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 install:
  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-#script:
-# - mvn clean verify
+script:
+ - mvn clean install
 
 
