--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ before_install:
 #  - mkdir /etc/postgresql/12/main/pg_hba.conf
 #  - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
 #  - "if [ ! -z $PGVERSION ]; then sudo service postgresql restart $PGVERSION; fi"
-sudo: enabled
+#sudo: enabled
 jdk: openjdk11
 os:
   - linux
-dist: trusty
+#dist: trusty
 addons:
     postgresql: "12"
  #   apt:
