--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ before_script:
 install:
  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
- - mvn clean install
+ - mvn test -B
 
