--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ services:
 before_script:
   - psql -c 'create database cosc2101;' -U postgres
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
-install:
- - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+#install:
+# - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
 # - mvn test -B
 
