--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 before_install:
-#  - chmod +x mvnw
+  - chmod +x mvnw
   - sudo service postgresql start
 #  - mkdir /etc/postgresql/12/main/pg_hba.conf
 #  - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
