--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ before_script:
 # - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
 # - mvn test -B
-  - mvn clean verify
+#  - mvn clean verify
 
