--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ before_install:
   - sudo service postgresql start
   - sudo apt-get update
   - sudo apt-get --yes remove postgresql\*
-  - sudo apt-get install -y postgresql-12 postgresql-client-12
-  - sudo cp /etc/postgresql/{9.6,12}/main/pg_hba.conf
-  - sudo service postgresql restart 12
+  - sudo apt-get install -y postgresql-11 postgresql-client-11
+  - sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
+  - sudo service postgresql restart 11
 
 #sudo: enabled
 jdk: openjdk11
@@ -14,7 +14,7 @@ os:
   - linux
 #dist: xenial
 addons:
-    postgresql: "12"
+    postgresql: "11"
  #   apt:
  #     packages:
  #           - postgresql-12
@@ -31,7 +31,7 @@ env:
 services:
   - postgresql
 before_script:
-  - psql -c 'CREATE DATABASE cosc2101;' -U postgres
+  - psql -c "CREATE DATABASE cosc2101;" -U postgres
   - sudo -u postgres psql -c "ALTER ROLE postgres WITH password 'super123'"
 #  - psql -f 'create_table.sql -d cosc2101;' -U postgres
 #install:
